// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTabsPane Snap render AtTabsPane -- props class 1`] = `
<view
  class="test at-tabs-pane at-tabs-pane--active test"
>
  
</view>
`;

exports[`AtTabsPane Snap render AtTabsPane -- props index current 1`] = `
<view
  class="at-tabs-pane at-tabs-pane--active"
>
  
</view>
`;

exports[`AtTabsPane Snap render AtTabsPane -- props index current 2`] = `
<view
  class="at-tabs-pane at-tabs-pane--inactive"
>
  
</view>
`;

exports[`AtTabsPane Snap render AtTabsPane -- props style 1`] = `
<view
  class="at-tabs-pane at-tabs-pane--active"
  style="color: red;"
>
  
</view>
`;

exports[`AtTabsPane Snap render initial AtTabs 1`] = `
<view
  class="at-tabs-pane at-tabs-pane--active"
>
  test
</view>
`;
